--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -31,7 +31,6 @@ a:hover {
 }
 
 #datetime-picker {
-  border: none;
   border: 1px solid #808080;
   border-radius: 4px;
   font-family: 'Montserrat', sans-serif;
@@ -39,17 +38,24 @@ a:hover {
   letter-spacing: 0.04em;
   padding: 10px;
   text-align: center;
+  outline: 0px solid transparent;
+  color:#2E2F42;
 }
 
 #datetime-picker:hover,
 #datetime-picker:focus {
     border: 1px solid #000000;
+    color: #000000;
 }
-1px solid
+
+#datetime-picker:active {
+  border: 1px solid #4E75FF;
+  color: #000000;
+}
 
 #datetime-picker:disabled {
-  background-color: #808080;
-  cursor: auto;
+  border: 1px solid #808080;
+  color: #808080;
 }
 
 button {
